--- a/tools/tools/sidekick/config.json
+++ b/tools/tools/sidekick/config.json
@@ -1,20 +1,10 @@
 {
-    "project": "EDS-asset-selector",
-    "host": "",
-    "plugins": [
-        {
-            "id": "asset-library",
-            "title": "AEM Assets",
-            "environments": [
-                "edit"
-            ],
-            "url": "https://experience.adobe.com/solutions/CQ-helix-assets-addon/static-assets/resources/asset-selector.html",
-            "isPalette": true,
-            "includePaths": [
-                "**.docx**"
-            ],
-            "passConfig": true,
-            "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
-        }
-    ]
+    "id": "asset-library",
+    "title": "My Assets",
+    "environments": [ "edit" ],
+    "url": "https://experience.adobe.com/solutions/CQ-helix-assets-addon/static-assets/resources/asset-selector.html?rail=false",
+    "isPalette": true,
+    "includePaths": [ "**.docx**" ],
+    "passConfig": true,
+    "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:800px; height: calc(100vh - 60px)"
 }
