--- a/tools/tools/sidekick/config.json
+++ b/tools/tools/sidekick/config.json
@@ -1,4 +1,7 @@
 {
+    "project" : "EDS"
+    "plugins" : [
+{
     "id": "asset-library",
     "title": "My Assets",
     "environments": [ "edit" ],
@@ -7,4 +10,6 @@
     "includePaths": [ "**.docx**" ],
     "passConfig": true,
     "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:800px; height: calc(100vh - 60px)"
+}
+    ]
 }
