--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -3,7 +3,7 @@
     "plugins": [
         {
             "id": "asset-library",
-            "title": "My Assets",
+            "title": "AEM Assets",
             "environments": [
                 "edit"
             ],
